Fix style issues in adding cable icons in departures
Image too large.

--- a/Transcyclopedia/sanfrancisco/muni/css_assets/muni.css
+++ b/Transcyclopedia/sanfrancisco/muni/css_assets/muni.css
@@ -275,7 +275,7 @@ body::after {
     align-items: center;
 }
 
-#route_cablestreetcar img {
+#route_cablestreetcar img, #line_for_each_departure_cable img {
     width: 15px;
     height: 15px;
     filter: invert(1);
